<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/total_amount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_amount_txt"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:text="@string/currency_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currency_txt"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/total_amount_input_field"
            android:layout_weight="1"
            android:hint="Enter total amount"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/number_of_people_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_of_people_txt"
            android:layout_weight="1"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/number_of_people_input"
            android:layout_weight="1"
            android:hint="Enter total people "
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/tip_amount_txt"
            android:layout_height="wrap_content"
            android:id="@+id/tip_amount_txt"
            android:layout_weight="0.04"
            android:textSize="18sp"
            android:layout_width="wrap_content" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_amount_spinner"
            android:entries="@array/tip_amount_arr" />
    </LinearLayout>

    <Button
        android:text="@string/calculate_btn_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_btn"
        android:layout_marginTop="30dp"/>

    <TextView
        android:text="@string/result_top_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/result_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_txt"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginTop="10dp"/>
</LinearLayout>